[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codt-tools"
version = "0.1.0"
description = "Configure, run, and analyze CODT (Cloudy One-Dimensional Turbulence) simulations"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "CODT Team"},
]
dependencies = [
    "numpy",
    "xarray",
    "netCDF4",
    "matplotlib",
    "f90nml",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["codt_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
